--- a/index.html
+++ b/index.html
@@ -13,10 +13,20 @@
 <body>
   <header class="header">
     <div class="wrapper">
-      <h1>Social Media Dashboard</h1>
-      <p class="header-total">Total Followers: 23,004</p>
-      <div class="header-dark">
-        <!-- <p>Dark Mode</p> -->
+      <div class="header-grid">
+        <div>
+          <h1>Social Media Dashboard</h1>
+          <p class="header-total">Total Followers: 23,004</p>
+        </div>
+        <div class="header-dark-mode">
+          <p class="dark-mode-title">Dark Mode</p>
+          <div class="swith-dark-mode">
+            <label for="checkbox" class="switch">
+              <input type="checkbox" name="" id="checkbox">
+              <span class="slider"></span>
+            </label>
+          </div>
+        </div>
       </div>
     </div>
   </header>
@@ -197,5 +207,6 @@
   Challenge by <a href="https://www.frontendmentor.io/challenges/social-media-dashboard-with-theme-switcher-6oY8ozp_H" target="_blank">Frontend Mentor</a>.
   Coded by <a href="https://citlallidmg.github.io/">Citlalli Del Moral</a>.
 </footer>
+<script src="js/index.js"></script>
 </body>
 </html>
